<resources>
    <string name="app_name">Shop_App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- ログイン画面用文字列 -->
    <string name="login_email_hint">メールアドレス</string>
    <string name="login_pass_hint">パスワード（6文字以上）</string>
    <string name="login_name_hint">表示名</string>
    <string name="login_create_button_text">アカウント作成</string>

    <string name="login_title">ログイン</string>
    <string name="create_account_title">アカウント登録</string>
    <string name="order_title">注文</string>
    <string name="create_account_failure_message">アカウント作成に失敗しました</string>
    <string name="login_failure_message">メールまたはパスワードが間違ったので、チェックしてください</string>
    <string name="login_error_message">正しく入力してください</string>
    <!-- 設定画面用文字列 -->
    <string name="settings_title">設定</string>
    <string name="favorite_title">お気に入り</string>
    <string name="change_name_hint">表示名</string>
    <string name="menu_change_button_label">変更</string>
    <string name="menu_logout_label">ログアウト</string>

    <string name="no_login_user">ログインしていません</string>
    <string name="change_display_name">表示名を変更しました</string>
    <string name="logout_complete_message">ログアウトしました</string>

    <!-- ドロワー・メニュー用文字列 -->
    <string name="genre_select_label">ジャンル選択</string>
    <string name="menu_vegetable_label">野菜</string>
    <string name="menu_drink_label">ドリンク</string>
    <string name="menu_meat_label">肉</string>
    <string name="menu_spice_label">調味料</string>
    <string name="menu_bento_label">弁当</string>
    <string name="menu_cart_label">カート</string>
    <string name="menu_favorite_label">お気に入り</string>
    <string name="menu_bought_label">購入したリスト</string>
    <string name="food_no_select_genre">ジャンルを選択してください</string>

    <!-- 質問投稿画面用文字列 -->
    <string name="title_label">タイトル</string>
    <string name="question_contents">質問内容</string>
    <string name="image_view_label">添付画像</string>
    <string name="send_button_label">投稿</string>

    <string name="question_send_title">質問作成</string>
    <string name="input_title">タイトルを入力してください</string>
    <string name="question_message">質問を入力してください</string>
    <string name="get_image">画像を取得</string>
    <string name="question_send_error_message">投稿に失敗しました</string>
    <string name="question_no_select_genre">ジャンルを選択してください</string>

    <!-- Favorite関連 -->
    <string name="delete_favorite_dialog_title">お気に入りの削除</string>
    <string name="delete_favorite_dialog_message">お気に入りを削除しますか？</string>
    <string name="empty_favorite">お気に入りはまだ登録されていません。</string>

    <!-- Cart関連 -->
    <string name="delete_cart_dialog_title">カートからアイテムの削除</string>
    <string name="delete_cart_dialog_message">カートからアイテムを削除しますか？</string>
    <string name="cart_favorite">カートはまだ登録されていません。</string>
    <!-- 購入関連　-->
    <string name="buy_button">注文</string>
    <string name="receiver_name">受取人</string>
    <string name="receiver_address">受取住所</string>
    <string name="receiver_phone">受取電話番号</string>
    <string name="card_number">カード番号</string>
    <string name="card_password">暗証番号</string>
    <string name="order_confirm">注文確認</string>
    <string name="option_genkin">現金</string>
    <string name="option_card">カード</string>
    <string name="warning_buy">以上の全部情報を入力ください</string>
    <!-- コメント追加関連　-->
    <string name="comment_add">コメント追加</string>
    <string name="comment_name">コメント内容</string>
    <string name="comment_body">コメントを入力ください</string>
    <string name="comment_button">追加</string>

    <!--    <String name="genkin">現金</String>-->
    <!--    <String name="card">カード</String>-->
</resources>