<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".OrderActivity">

    <RelativeLayout
        android:id="@+id/registerProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:elevation="1dp"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtOrder"
            android:text="注文確認"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="80sp"
            android:textSize="50sp"
            android:textColor="@color/teal_200"/>
        <TextView
            android:id="@+id/txtPrice"
            android:text="支払総額: 50$"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textSize="30sp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/txtRemind"
            android:text="以下の情報を入力してください"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_border_for_view"
            android:drawablePadding="4dp"
            android:hint="@string/receiver_name"
            android:inputType="text"
            android:maxLength="20"
            android:padding="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_border_for_view"
            android:drawablePadding="4dp"
            android:hint="@string/receiver_phone"
            android:inputType="number"
            android:maxLength="13"
            android:padding="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etDeliveryAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_border_for_view"
            android:drawablePadding="4dp"
            android:hint="@string/receiver_address"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/txtPay"
            android:text="支払方法を選んでください"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <RadioGroup
            android:id="@+id/rgPay"
            android:layout_marginLeft="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/money"
                android:text="@string/option_genkin"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/card"
                android:textColor="@color/white"
                android:text="@string/option_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="InvalidId" />

        </RadioGroup>

        <EditText
            android:id="@+id/etCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_border_for_view"
            android:drawablePadding="4dp"
            android:hint="@string/card_number"
            android:inputType="numberPassword"
            android:maxLength="8"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etCardPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_border_for_view"
            android:drawablePadding="4dp"
            android:hint="@string/card_password"
            android:inputType="numberPassword"
            android:maxLength="8"
            android:padding="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="#e53935"
            android:text="@string/order_confirm"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>